<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="11dp"
    tools:context=".AddTaskFragment">
    <TextView
        style="@style/tv_addTask"
        android:id="@+id/tv_addTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_new_task"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@id/tv_addTask"
        app:layout_constraintStart_toStartOf="parent"

        >
        <EditText
            android:id="@+id/et_title"
            style="@style/edit_text_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/add_task">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/task_title"
        app:layout_constraintStart_toStartOf="parent"
        >

        <EditText
            style="@style/edit_text_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/task_description"
            android:maxLines="4"
            android:minLines="4">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/task_desc"
        >
        <TextView
            android:id="@+id/dateTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="date"
            android:gravity="start"
            android:padding="12dp"
            />
        
    </com.google.android.material.textfield.TextInputLayout>
    <Button
       android:id="@+id/btntask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date"
        android:layout_marginTop="15dp"
        style="@style/btn_add"
        android:text="Add"
        android:backgroundTint="@color/blue"

        />


</androidx.constraintlayout.widget.ConstraintLayout>